--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,31 +17,13 @@
     <body>
         {% include 'menu/main.html.twig' with {page: currentPage|default('articles')} %}
 
-        {% block alerts %}
-            {% for message in app.flashes('success') %}
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                {{ message }}
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="{{ 'aria.label.close'|trans|capitalize }}"></button>
-            </div>
-            {% endfor %}
-            {% for message in app.flashes('warning') %}
-                <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="{{ 'aria.label.close'|trans|capitalize }}"></button>
-                </div>
-            {% endfor %}
-            {% for message in app.flashes('error') %}
-                <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="{{ 'aria.label.close'|trans|capitalize }}"></button>
-                </div>
-            {% endfor %}
-        {% endblock %}
+        {% include 'tools/alerts.html.twig' %}
 
         {% block body %}{% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+            <script src="{{ asset('lib/jQuery/jquery-3.6.1.min.js') }}" type="text/javascript"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         {% endblock %}
     </body>
