--- a/templates/event/list.html.twig
+++ b/templates/event/list.html.twig
@@ -8,7 +8,9 @@
 {% endblock %}
 
 {% block body %}
-    <div id="event-calendar"></div>
+    <div class="container">
+        <div id="event-calendar" class="mt-4"></div>
+    </div>
 
     <!-- Modal -->
     <div class="modal fade" id="event-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -66,6 +68,7 @@
                 slotMinTime: '06:00',
                 slotMaxTime: '22:00',
                 selectable: true,
+                themeSystem: 'bootstrap5',
                 events: [
                     {% for event in events %}
                     {
