--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,11 +2,16 @@
 
 {% block title %}{{ 'home.title'|trans|title }}{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" type="text/css" href="{{ asset('lib/fullCalendar.js/main.min.css') }}"/>
+{% endblock %}
+
 {% block body %}
-    <header class="py-5 bg-light border-bottom mb-4">
+    <header class="py-4 bg-light border-bottom mb-4">
         <div class="container">
             <div class="text-center my-5">
-                <h1 class="fw-bolder">{{ 'home.main.title'|trans|title }}</h1>
+                <h1 class="fw-bolder">{{ 'home.main.title'|trans }}</h1>
                 <p class="lead mb-0">{{ 'home.main.description'|trans|capitalize }}</p>
             </div>
         </div>
@@ -27,13 +32,14 @@
                     {% endif %}
                     <div class="card-body">
                         <div class="small text-muted">
-                            {{ 'article.show.date'|trans({
+                            {{ 'article.show.date_and_author'|trans({
                                 date: mainArticle.updatedAt|date('d/m/Y'),
-                                hour: mainArticle.updatedAt|date('H:i:s')
+                                hour: mainArticle.updatedAt|date('H:i:s'),
+                                author: mainArticle.author.fullName
                             }) }}
                         </div>
                         <h2 class="card-title">{{ mainArticle.title|title }}</h2>
-                        <p class="card-text">{{ mainArticle.description[:300]|trim('<p>')|trim('</p>') }}...</p>
+                        <p class="card-text">{{ mainArticle.description[:300]|striptags }}...</p>
                         <a class="btn btn-primary" href="{{ path('app_article_show', {slug: mainArticle.slug}) }}">
                             {{ 'article.show.show_more'|trans }}
                             <i class="bi bi-arrow-right-short"></i>
@@ -55,13 +61,14 @@
                                     {% endif %}
                                     <div class="card-body">
                                         <div class="small text-muted">
-                                            {{ 'article.show.date'|trans({
+                                            {{ 'article.show.date_and_author'|trans({
                                                 date: article.updatedAt|date('d/m/Y'),
-                                                hour: article.updatedAt|date('H:i:s')
+                                                hour: article.updatedAt|date('H:i:s'),
+                                                author: article.author.fullName
                                             }) }}
                                         </div>
                                         <h2 class="card-title h4">{{ article.title|title }}</h2>
-                                        <p class="card-text">{{ article.description[:150]|trim('<p>')|trim('</p>') }}...</p>
+                                        <p class="card-text">{{ article.description[:150]|striptags }}...</p>
                                         <a class="btn btn-primary" href="{{ path('app_article_show', {slug: article.slug}) }}">
                                             {{ 'article.show.show_more'|trans }}
                                             <i class="bi bi-arrow-right-short"></i>
@@ -83,13 +90,14 @@
                                     {% endif %}
                                     <div class="card-body">
                                         <div class="small text-muted">
-                                            {{ 'article.show.date'|trans({
+                                            {{ 'article.show.date_and_author'|trans({
                                                 date: article.updatedAt|date('d/m/Y'),
-                                                hour: article.updatedAt|date('H:i:s')
+                                                hour: article.updatedAt|date('H:i:s'),
+                                                author: article.author.fullName
                                             }) }}
                                         </div>
                                         <h2 class="card-title h4">{{ article.title|title }}</h2>
-                                        <p class="card-text">{{ article.description[:150]|trim('<p>')|trim('</p>') }}...</p>
+                                        <p class="card-text">{{ article.description[:150]|striptags }}...</p>
                                         <a class="btn btn-primary" href="{{ path('app_article_show', {slug: article.slug}) }}">
                                             {{ 'article.show.show_more'|trans }}
                                             <i class="bi bi-arrow-right-short"></i>
@@ -102,18 +110,21 @@
                 </div>
 
                 <!-- Pagination-->
-                <nav aria-label="Pagination">
+                {% if numberOfPage > 1 %}
+                <nav aria-label="{{ 'aria.label.pagination'|trans }}">
                     <hr class="my-0">
                     <ul class="pagination justify-content-center my-4">
-                        <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-                        <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                        <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-                        <li class="page-item"><a class="page-link" href="#!">15</a></li>
-                        <li class="page-item"><a class="page-link" href="#!">Older</a></li>
+                        {% for i in 1..numberOfPage %}
+                            <li class="page-item{% if currentPageIndex == i %} active" aria-current="page{% endif %}">
+                                <a class="page-link" href="{{ path('app_home', {
+                                    page: i,
+                                    limit: currentLimit
+                                }) }}">{{ i }}</a>
+                            </li>
+                        {% endfor %}
                     </ul>
                 </nav>
+                {% endif %}
             </div>
 
             <!-- Side widgets -->
@@ -132,7 +143,58 @@
                         </form>
                     </div>
                 </div>
+
+                <!-- Calendar widget -->
+                <div class="card mb-4">
+                    <div class="card-header">{{ 'home.main.calendar'|trans }}</div>
+                    <div class="card-body">
+                        <div id="event-calendar"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+<!-- Modal -->
+<div class="modal fade" id="main-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+</div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script type="text/javascript" src="{{ asset('lib/fullCalendar.js/main.min.js') }}"></script>
+    <script type="text/javascript">
+        document.addEventListener('DOMContentLoaded', function() {
+            const calendarEl = document.getElementById('event-calendar');
+            const calendar = new FullCalendar.Calendar(calendarEl, {
+                initialView: 'dayGridMonth',
+                locale: 'fr',
+                firstDay: 1,
+                selectable: true,
+                themeSystem: 'bootstrap5',
+                events: [
+                    {% for event in events %}
+                    {
+                        id: {{ event.id }},
+                        title: '{{ event.title|title }}',
+                        description: '{{ event.description }}',
+                        start: '{{ event.startAt|date("c") }}',
+                        end: '{{ event.endAt|date("c") }}',
+                    },
+                    {% endfor %}
+                ],
+                eventClick: (info) => {
+                    $.get('{{ path('app_event_show_modal', {id: '----'}) }}'.replace('----', info.event.id), (view) => {
+                        const modal = $('#main-modal');
+                        modal.empty();
+                        modal.html(view);
+
+                        const myModal = new bootstrap.Modal(document.getElementById('main-modal'));
+                        myModal.toggle();
+                    });
+                },
+            });
+            calendar.render();
+        });
+    </script>
 {% endblock %}
