--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -11,6 +11,8 @@
 <body>
     <section class="h-100">
         <div class="container h-100">
+            {% include 'tools/alerts.html.twig' %}
+
             <div class="row justify-content-sm-center h-100">
                 <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
                     <div class="text-center my-5">
@@ -37,7 +39,8 @@
 
                                 <div class="d-flex align-items-center">
                                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                                    <button type="submit" class="btn btn-primary ms-auto">{{ 'user.login.form.submit_button'|trans|capitalize }}</button
+                                    <a href="{{ path('app_register') }}">{{ 'user.registration.link'|trans|capitalize }}</a>
+                                    <button type="submit" class="btn btn-primary ms-auto">{{ 'user.login.form.submit_button'|trans|capitalize }}</button>
                                 </div>
                             </form>
                         </div>
@@ -54,4 +57,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
-{#{% endblock %}#}
