--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,21 +1,90 @@
-{% extends 'base.html.twig' %}
+<!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>{% block title %}{{ 'page.registration.title'|trans|capitalize }}{% endblock %}</title>
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        {{ encore_entry_link_tags('app') }}
+    </head>
+    <body>
+        <section class="h-100">
+            <div class="container h-100">
+                {% include 'tools/alerts.html.twig' %}
 
-{% block title %}{{ 'user.registration.page.title'|trans|title }}{% endblock %}
+                <div class="row justify-content-sm-center h-100">
+                    <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
+                        <div class="text-center my-5">
+                            <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">
+                        </div>
+                        <div class="card shadow-lg">
+                            <div class="card-body p-5">
+                                <h1 class="fs-4 card-title fw-bold mb-4">{{ 'user.registration.title'|trans|capitalize }}</h1>
+                                {{ form_start(registrationForm) }}
+                                    {% for flash_error in app.flashes('verify_email_error') %}
+                                        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+                                    {% endfor %}
+                                    <div class="mb-3">
+                                        {{ form_errors(registrationForm.email) }}
+                                        {{ form_label(registrationForm.email, null, {'label_attr': {'class': 'mb-2 text-muted'}}) }}
+                                        {{ form_widget(registrationForm.email, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
 
-{% block body %}
-    {% for flash_error in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
+                                    <div class="mb-3">
+                                        <div class="mb-2 w-100">
+                                            {{ form_errors(registrationForm.plainPassword) }}
+                                            {{ form_label(registrationForm.plainPassword, 'user.registration.password'|trans|capitalize, {'label_attr': {'class': 'text-muted'}}) }}
+                                        </div>
+                                        {{ form_widget(registrationForm.plainPassword, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
 
-    <h1>{{ 'user.registration.title'|trans|title }}</h1>
+                                    <div class="mb-3">
+                                        <div class="mb-2 w-100">
+                                            {{ form_errors(registrationForm.gender) }}
+                                            {{ form_label(registrationForm.gender, 'user.registration.gender'|trans|capitalize, {'label_attr': {'class': 'text-muted'}}) }}
+                                        </div>
+                                        {{ form_widget(registrationForm.gender, {'attr': {'class': 'form-select'}}) }}
+                                    </div>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+                                    <div class="mb-3">
+                                        <div class="mb-2 w-100">
+                                            {{ form_errors(registrationForm.firstName) }}
+                                            {{ form_label(registrationForm.firstName, 'user.registration.first_name'|trans|capitalize, {'label_attr': {'class': 'text-muted'}}) }}
+                                        </div>
+                                        {{ form_widget(registrationForm.firstName, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
 
-        <button type="submit" class="btn">{{ 'user.registration.form.submit_button'|trans|capitalize }}</button>
-    {{ form_end(registrationForm) }}
-{% endblock %}
+                                    <div class="mb-3">
+                                        <div class="mb-2 w-100">
+                                            {{ form_errors(registrationForm.lastName) }}
+                                            {{ form_label(registrationForm.lastName, 'user.registration.last_name'|trans|capitalize, {'label_attr': {'class': 'text-muted'}}) }}
+                                        </div>
+                                        {{ form_widget(registrationForm.lastName, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+
+                                    <div class="mb-3">
+                                        {{ form_errors(registrationForm.agreeTerms) }}
+                                        {{ form_label(registrationForm.agreeTerms, 'user.registration.agree_terms'|trans|capitalize, {'label_attr': {'class': 'text-muted'}}) }}
+                                        {{ form_widget(registrationForm.agreeTerms) }}
+                                    </div>
+
+                                    <div class="d-flex align-items-center">
+                                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                                        <button type="submit" class="btn btn-primary ms-auto">{{ 'user.registration.form.submit_button'|trans|capitalize }}</button>
+                                    </div>
+                                {{ form_end(registrationForm) }}
+                            </div>
+                        </div>
+                        <div class="text-center mt-3 text-muted">
+                            Copyright &copy; {{ 'now'|date('Y') }} &mdash; CA & Parents d'élèves
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        {{ encore_entry_script_tags('app') }}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    </body>
+</html>
