--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,12 +25,17 @@
             {{ encore_entry_script_tags('app') }}
             <script src="{{ asset('lib/jQuery/jquery-3.6.1.min.js') }}" type="text/javascript"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+            <script src="https://cdn.tiny.cloud/1/im9smzglqjzb95okb41mpg1ldam7pj2pp9ie5gl0ip4dqnhp/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
             <script type="text/javascript">
                 $(function() {
                     $('.action-delete').on('click', (e) => {
                         if (!confirm($(e.currentTarget).data('msg'))) {
                             e.preventDefault();
                         }
+                    });
+
+                    tinymce.init({
+                        selector: 'textarea.tiny-mce-textarea'
                     });
                 });
             </script>
